<resources>
    <string name="app_name">TARUC APP</string>
    <string name="action_settings">Settings</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="edit_account">Edit Account</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_edit_acount">EditAcountActivity</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_current_password">Current Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_new_password2">New Password Again</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_up_for_taruc_assist">Login</string>
    <string name="login">Login</string>
    <string name="change_password">Change Password</string>
    <string name="hint_studentid">Student ID</string>
    <string name="hint_fullname">Full Name</string>
    <string name="hint_nric">NRIC No</string>
    <string name="hint_contact">Contact Number</string>
    <string name="hint_email">Email Address</string>
    <string name="hint_gender">Gender</string>
    <string name="hint_homeAddress">Home Address</string>
    <string name="hint_campusAddress">Campus Address</string>
    <string name="hint_faculty">Faculty</string>
    <string name="hint_programme">Programme</string>
    <string name="hint_campus">Campus</string>
    <string name="dashboard">Dashboard</string>
    <string name="wallet">Wallet</string>
    <string name="topup">Top Up</string>
    <string name="transfer">Transfer</string>
    <string name="payment">Payment</string>
    <string name="profile">Profile Picture</string>
    <string name="studentinfo">Student Information</string>
    <string name="privateinfo">Private Information</string>
    <string name="text_retrieve_password">Enter your Login Username and NRIC No to retrieve your password.</string>
    <string name="hint_school_email">School Email</string>
    <string name="hint_sessionJoined">Session Joined</string>
    <string name="change_pincode">Change PIN Code</string>
    <string name="hint_current_pincode">Current PIN Code</string>
    <string name="hint_new_pincode">New PIN Code</string>
    <string name="hint_new_pincode2">New PIN Code again</string>
    <string name="walletBalance">Wallet Balance</string>
    <string name="busSchedule">Bus Schedules</string>
    <string name="classSchedule">Class Schedules</string>
    <string name="test">Test</string>
    <string name="departure">Departure : </string>
    <string name="hint_wangsamaju">Wangsa maju</string>
    <string name="destination">Destination : </string>
    <string name="hint_busStop1">Bus Stop 1</string>
    <string name="date">Date : </string>
    <string name="hint_montothur">Monday to Thursday</string>
    <string name="time">Time :</string>
    <string name="hint_time">7.25 7.30 7.45 8.00 8.15 8.30 8.45 9.00 9.15 9.30 9.45 10.00</string>
    <string name="hint_library">Library</string>
    <string name="hint_time2">7:15 7:30 8:15 9:10</string>
    <string name="foodOrder">Food Order</string>
    <string name="hint_accountID">Account ID</string>
    <string name="hint_remark">Remark</string>
    <string name="confirm">Confirm</string>
    <string name="hint_amount">Amount</string>
    <string name="transaction">Transaction</string>
    <string name="hint_recipient_account">Recipient Account</string>
    <string name="shareButton">Share Message</string>
    <string name="maintain_account">Maintain Account</string>
    <string name="maintain_classSchedule">Maintain Class Schedule</string>
    <string name="maintain_busSchedule">Maintain Bus Schedule</string>
    <string name="maintain_foodstall">Maintain Food Stall</string>
    <string name="maintain_foodstall1">Food Stall Details</string>
    <string name="hint_account_type">Account Type</string>
    <string name="hint_account_authorization">Account Authorization</string>
    <string name="hint_backendID">Backend ID</string>
    <string name="logininfo">Login Details</string>
    <string name="hint_loginID">Login ID</string>
    <string name="hint_accountid">Account ID</string>
    <string name="hint_groupNo">Group No</string>
    <string name="subject">Subject:</string>
    <string name="tutorlecturer">Tutor / Lecturer:</string>
    <string name="location">Location:</string>
    <string name="startTime">Start Time:</string>
    <string name="endTime">End Time:</string>
    <string name="faculty">Faculty:</string>
    <string name="programme">Programme:</string>
    <string name="groupNo">Group No:</string>
    <string name="serach">Search</string>
    <string name="status">Status:</string>
    <string name="lastedit">Last Edit By:</string>
    <string name="delete">Delete</string>
    <string name="title">Transfer option:</string>
    <string name="titleAlarm">Set Alarm:</string>
    <string name="title2">Top Up</string>
    <string name="title7">Transfer</string>
    <string name="content">Please touch your device to the Recipient Device.</string>
    <string name="agree">Finish</string>
    <string name="recipientID">Recipient\'s Account:</string>
    <string name="transactionType">Transaction Type:</string>
    <string name="amount">Amount</string>
    <string name="dateTime"><![CDATA[Date&Time:]]></string>
    <string name="remark">Remark:</string>
    <string name="senderID">Sender\'s Account:</string>
    <string name="accountID">Account ID:</string>
    <string name="fullname">Name:</string>
    <string name="account_authorization">Authorization:</string>
    <string name="contactNo">Contact Number:</string>
    <string name="email">Email Address:</string>
    <string name="account_type">Account Type:</string>
    <string name="topupAmount">Top Up Amount:</string>
    <string name="name">Name:</string>
    <string name="report">Overall Transaction</string>
    <string name="report1">Overall Report</string>
    <string name="foodstallName">Stall Name:</string>
    <string name="upcomingtime">Upcoming Time:</string>
    <string name="stallname">Stall Name:</string>
    <string name="ownerID">Owner ID:</string>
    <string name="joinedDate">Joined Date:</string>
    <string name="personalAccount">Personal Account</string>
    <string name="classType">Class Type:</string>
    <string name="quantity">Select Quantities</string>
    <string name="quantity2">Quantity:</string>
    <string name="foodDetails">Food Details</string>
    <string name="foodName">Food Name:</string>
    <string name="foodDescription">Food Description:</string>
    <string name="foodCategory">Food Category:</string>
    <string name="foodPrice">Food Price:</string>
    <string name="totalGST">Total GST 6%:</string>
    <string name="totalprice">Total Price:</string>
    <string name="grandTotal">Grand Total:</string>
    <string name="checkout">Checkout</string>
    <string name="clear">Clear</string>
    <string name="title3">Payment option:</string>
    <string name="totalAmount">Total Amount:</string>
    <string name="barTitle">Total Spending</string>
    <string name="barTitle2">Top 5 Best Selling</string>
    <string name="paymentDate">Payment Date Time:</string>
    <string name="maintain_foodMenu">Maintain Food Menu</string>
    <string name="maintain_foodreport">Maintain Food Report</string>
    <string name="foodPic">Food Picture</string>
    <string name="update">Update</string>
    <string name="register">Register New Account</string>
    <string name="text_register">Please fill in the account details.</string>
    <string name="hint_name">Name</string>
    <string name="hint_code">Activation Code</string>
    <string-array name="gender_arrays">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="account_type_arrays">
        <item>Select Account Type</item>
        <item>End User</item>
        <item>Back End</item>
    </string-array>
    <string-array name="topup_amount_arrays">
        <item>RM 5</item>
        <item>RM 10</item>
        <item>RM 20</item>
        <item>RM 50</item>
        <item>RM 100</item>
        <item>Other Amount</item>
    </string-array>
    <string-array name="transfer_amount_arrays">
        <item>RM 5</item>
        <item>RM 10</item>
        <item>RM 20</item>
        <item>RM 50</item>
        <item>RM 100</item>
    </string-array>
    <string-array name="enduser_authorization_arrays">
        <item>Select Authorization</item>
        <item>Student</item>
        <item>Lecturer / Tutor</item>
    </string-array>
    <string-array name="backend_authorization_arrays">
        <item>Select Authorization</item>
        <item>Admin</item>
        <item>Student Affair Department</item>
        <item>Food Stall Owner</item>
    </string-array>
    <string-array name="food_category_arrays">
        <item>Food</item>
        <item>Beverage</item>
        <item>Dessert</item>
        <item>Snack</item>
    </string-array>
    <string-array name="busDate_arrays">
        <item>Monday to Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string-array name="date_arrays">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string-array name="busDeparture_arrays">
        <item>Bus Stop 1</item>
        <item>Bus Stop 2 and 3</item>
        <item>Bus Stop 4 and 5</item>
        <item>Bus Stop 6</item>
        <item>Library</item>
    </string-array>
    <string-array name="quantity_arrays">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="busDestination_arrays">
        <item>Wangsa Maju</item>
        <item>Genting Klang</item>
        <item>PV10/12/13/15/16</item>
        <item>Melati Utama</item>
        <item>Sri Rampai</item>
    </string-array>
    <string-array name="sessionJoined_arrays">
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
    </string-array>
    <string-array name="sessionJoined2_arrays">
        <item>04</item>
        <item>09</item>
    </string-array>
    <string-array name="items">
        <item>Direct Transfer</item>
        <item>Transfer via NFC</item>
    </string-array>
    <string-array name="items2">
        <item>Direct Payment</item>
        <item>Payment via NFC</item>
    </string-array>
    <string-array name="items3">
        <item>View Order Cart</item>
        <item>View Transaction History</item>
    </string-array>
    <string-array name="items5">
        <item>Upcoming Bus</item>
    </string-array>
    <string-array name="items4">
        <item>MONDAY</item>
        <item>TUESDAY</item>
        <item>WEDNESDAY</item>
        <item>THURSDAY</item>
        <item>FRIDAY</item>
        <item>SATURDAY</item>
        <item>SUNDAY</item>
        <item>View All</item>
    </string-array>
    <string-array name="faculty_arrays">
        <item>FASC</item>
        <item>FAFB</item>
        <item>FEBE</item>
        <item>FSAH</item>
        <item>CPUS</item>
    </string-array>
    <string-array name="classType_arrays">
        <item>Lecture</item>
        <item>Tutorial</item>
    </string-array>
    <string-array name="campus_arrays">
        <item>Kuala Lumpur Main Campus</item>
        <item>Penang Branch Campus</item>
        <item>Perak Branch Campus</item>
        <item>Johor Branch Campus</item>
        <item>Pahang Branch Campus</item>
        <item>Sabah Branch Campus</item>
    </string-array>
</resources>