<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.wenda.tarucnfc.Activity.EditAccountActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_tag_text_outline"
                        />

                    <EditText
                        android:id="@+id/edit_text_studentid"
                        android:layout_width="260dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_vertical_margin"
                        android:layout_gravity="center"
                        android:inputType="text"
                        android:hint="@string/hint_studentid"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_account_box"
                        />

                    <EditText
                        android:id="@+id/edit_text_fullname"
                        android:layout_width="260dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_vertical_margin"
                        android:layout_gravity="center"
                        android:inputType="text"
                        android:hint="@string/hint_fullname"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_credit_card"
                        />

                    <EditText
                        android:id="@+id/edit_text_nric"
                        android:layout_width="260dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_vertical_margin"
                        android:layout_gravity="center"
                        android:inputType="text"
                        android:hint="@string/hint_nric"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_cellphone_android"
                        />

                    <EditText
                        android:id="@+id/edit_text_contact"
                        android:layout_width="260dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_vertical_margin"
                        android:layout_gravity="center"
                        android:inputType="text"
                        android:hint="@string/hint_contact"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_email"
                        />

                    <EditText
                        android:id="@+id/edit_text_email"
                        android:layout_width="260dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_vertical_margin"
                        android:layout_gravity="center"
                        android:inputType="text"
                        android:hint="@string/hint_email"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_gender_male_female"
                        />

                    <Spinner
                        android:id="@+id/spinner_gender"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_vertical_margin"
                        android:layout_gravity="center"
                        android:inputType="text"
                        android:hint="@string/hint_gender"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_home"
                        />

                    <EditText
                        android:id="@+id/edit_text_homeAddress"
                        android:layout_width="260dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_vertical_margin"
                        android:layout_gravity="center"
                        android:inputType="text"
                        android:hint="@string/hint_homeAddress"
                        />

                    </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_map_marker"
                        />

                    <EditText
                        android:id="@+id/edit_text_campusAddress"
                        android:layout_width="260dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_vertical_margin"
                        android:layout_gravity="center"
                        android:inputType="text"
                        android:hint="@string/hint_campusAddress"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_school"
                        />

                    <EditText
                        android:id="@+id/edit_text_faculty"
                        android:layout_width="260dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_vertical_margin"
                        android:layout_gravity="center"
                        android:inputType="text"
                        android:hint="@string/hint_faculty"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_book_open_variant"
                        />

                    <EditText
                        android:id="@+id/edit_text_programme"
                        android:layout_width="260dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_vertical_margin"
                        android:layout_gravity="center"
                        android:inputType="text"
                        android:hint="@string/hint_programme"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_hospital_building"
                        />

                    <EditText
                        android:id="@+id/edit_text_campus"
                        android:layout_width="260dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_vertical_margin"
                        android:layout_gravity="center"
                        android:inputType="text"
                        android:hint="@string/hint_campus"
                        />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
